--- a/desafios/modulo 2/d011/index.html
+++ b/desafios/modulo 2/d011/index.html
@@ -7,11 +7,22 @@
     <style>
         body{
             background-image: url(imagens/espaco.jpg);
-            
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: top center;
+        }
+        .container{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
     </style>
 </head>
 <body>
-    
+    <div class="container">
+        <img src="imagens/astronauta.png" alt="">
+    </div>
 </body>
 </html>
