--- a/exercicios/modulo 3/ex023/tabela001.html
+++ b/exercicios/modulo 3/ex023/tabela001.html
@@ -11,16 +11,15 @@
         
         table{
             width: 400px;
-            padding: 8px;
+            height: 400px;
             border-collapse: collapse;
         }
 
-        tr.cor{
-            background-color: gray;
-        }
-
         td{
-            border: 1px solid black
+            border: 1px solid black;
+            padding: 8px;
+            text-align: center; /*Alinhamento Horizontal*/
+            vertical-align: middle; /*ALinhamento vertical*/
         }
     </style>
 </head>
@@ -44,7 +43,7 @@
             <td>B2</td>
             <td>C2</td>
         </tr>
-        <tr class="cor">
+        <tr>
             <td>A3</td>
             <td>B3</td>
             <td>C3</td>
